add xorm,lib...
